--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
         <span>Kullandığınız alanları temiz bırakın.</span>
       </li>
       <li>
-        <i class="fas fa-utensils"></i>
-        <span>Yüksek ses yapıp ev sakinlerini rahatsız etmeyin</span>
+        <i class="fas fa-volume-up"></i>
+        <span>Yüksek ses yapıp ev sakinlerini rahatsız etmeyin.</span>
       </li>
       <li>
         <i class="fas fa-utensils"></i>
@@ -134,7 +134,7 @@
       </li>
       <li>
         <i class="fas fa-soap"></i>
-        <span>Mutfakta bulaşıkları kullandıktan sonra makineye kaldırın. Dolu ise düzenlice tezgaha bırakın.</span>
+        <span>Mutfakta bulaşıkları kullandıktan sonra makineye kaldırın. Dolu ise su tutarak düzenlice tezgaha bırakın.</span>
       </li>
       <li>
         <i class="fas fa-bed"></i>
@@ -142,11 +142,11 @@
       </li>
       <li>
         <i class="fas fa-volume-up"></i>
-        <span>Gece saat 23:00'dan sonra ses seviyesine dikkat edin.</span>
+        <span>Gece saat 22:00'dan sonra ses seviyesine dikkat edin.</span>
       </li>
       <li>
-        <i class="fas fa-plug"></i>
-        <span>Kullanmadığınız elektrikli aletleri prizden çekin.</span>
+        <i class="fa-solid fa-trash"></i>
+        <span>Her çöpü, türüne göre atılması gereken çöp kutusuna atın.</span>
       </li>
     </ul>
 
