--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <span>Gece saat 22:00'dan sonra ses seviyesine dikkat edin.</span>
       </li>
       <li>
-        <i class="fa-trash"></i>
+        <i class="fas fa-trash"></i>
         <span>Her çöpü, türüne göre atılması gereken çöp kutusuna atın.</span>
       </li>
     </ul>
