--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <span>Kullandığınız alanları temiz bırakın.</span>
       </li>
       <li>
-        <i class="fas fa-volume-up"></i>
+        <i class="fas fa-volume-mute"></i>
         <span>Yüksek ses yapıp ev sakinlerini rahatsız etmeyin.</span>
       </li>
       <li>
@@ -141,7 +141,7 @@
         <span>Çarşafları kullandıktan sonra çamaşır makinesinin yanına koyun.</span>
       </li>
       <li>
-        <i class="fas fa-volume-up"></i>
+        <i class="fas fa-moon"></i>
         <span>Gece saat 22:00'dan sonra ses seviyesine dikkat edin.</span>
       </li>
       <li>
